--- a/Audyt innowacyjności/Page8.xaml
+++ b/Audyt innowacyjności/Page8.xaml
@@ -12,5 +12,23 @@
         <Button Content="Dalej" HorizontalAlignment="Left" Margin="653,408,0,0" VerticalAlignment="Top" Width="75" Click="Next"/>
         <Button Content="Confij" HorizontalAlignment="Left" Margin="573,408,0,0" VerticalAlignment="Top" Width="75" Click="Back"/>
 
+        <TextBox x:Name="BarieryWewnetrzne" Text="{Binding BarieryWewnetrzne, ValidatesOnNotifyDataErrors=True}" HorizontalAlignment="Left" Height="23" Margin="391,128,-211,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" RenderTransformOrigin="-1.562,-1.653"/>
+        <TextBox x:Name="BarieryZewnetrzne" Text="{Binding BarieryZewnetrzne, ValidatesOnNotifyDataErrors=True}" HorizontalAlignment="Left" Height="23" Margin="391,156,-211,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" RenderTransformOrigin="-1.562,-1.653"/>
+        <TextBox x:Name="MocneStrony" Text="{Binding MocneStrony, ValidatesOnNotifyDataErrors=True}" HorizontalAlignment="Left" Height="23" Margin="391,214,-211,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" RenderTransformOrigin="-1.562,-1.653"/>
+        <TextBox x:Name="SlabeStrony" Text="{Binding SlabeStrony, ValidatesOnNotifyDataErrors=True}" HorizontalAlignment="Left" Height="23" Margin="391,242,-211,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" RenderTransformOrigin="-1.562,-1.653"/>
+        <TextBox x:Name="Szanse" Text="{Binding Szanse, ValidatesOnNotifyDataErrors=True}" HorizontalAlignment="Left" Height="23" Margin="391,270,-211,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" RenderTransformOrigin="-1.562,-1.653"/>
+        <TextBox x:Name="Zagrozenia" Text="{Binding Zagrozenia, ValidatesOnNotifyDataErrors=True}" HorizontalAlignment="Left" Height="23" Margin="391,298,-211,-21" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" RenderTransformOrigin="-1.562,-1.653"/>
+
+        <Label Content="Jakie bariery wpływają na wolniejszy  rozwój i innowacyjność przedsiębiorstwa:" HorizontalAlignment="Left" Margin="-50,102,-75,0" VerticalAlignment="Top" Width="425" />
+
+        <Label Content="a) Wewnętrzne ( występujące bezpośrednio w przedsiębiorstwie)" HorizontalAlignment="Left" Margin="25,128,-75,0" VerticalAlignment="Top" Width="350" />
+        <Label Content="b) Zewnętrzne ( związane z otoczeniem przedsiębiorstwa)" HorizontalAlignment="Left" Margin="63,156,-75,0" VerticalAlignment="Top" Width="312"/>
+        <Label Content="        SWOT przedsiębiorstwa: ( proszę wymienić min. po 2 w każdym obszarze)" HorizontalAlignment="Left" Margin="-50,184,-75,0" VerticalAlignment="Top" Width="425"/>
+        <Label Content="a) Mocne strony przedsiębiorstwa:" HorizontalAlignment="Left" Margin="183,212,-75,0" VerticalAlignment="Top" Width="192"/>
+        <Label Content="  b) Słabe strony przedsiębiorstwa: " HorizontalAlignment="Left" Margin="184,239,-75,0" VerticalAlignment="Top" Width="191"/>
+        <Label Content="c)Szanse przedsiębiorstwa: " HorizontalAlignment="Left" Margin="223,267,-74,0" VerticalAlignment="Top" Width="151" />
+        <Label Content="  d) Zagrożenia dla przedsiębiorstwa:" HorizontalAlignment="Left" Margin="171,295,-75,-19" VerticalAlignment="Top" Width="204" />
+        <Label Content="Strona 7/14" HorizontalAlignment="Left" Margin="328,10,0,0" VerticalAlignment="Top"/>
+
     </Grid>
 </Page>
