--- a/Audyt innowacyjności/Page10.xaml
+++ b/Audyt innowacyjności/Page10.xaml
@@ -11,6 +11,7 @@
     <Grid>
         <Button Content="Dalej" HorizontalAlignment="Left" Margin="653,408,0,0" VerticalAlignment="Top" Width="75" Click="Next"/>
         <Button Content="Confij" HorizontalAlignment="Left" Margin="573,408,0,0" VerticalAlignment="Top" Width="75" Click="Back"/>
+        <Label Content="Strona 9/14" HorizontalAlignment="Left" Margin="328,10,0,0" VerticalAlignment="Top"/>
 
     </Grid>
 </Page>
