--- a/Audyt innowacyjności/Page6.xaml
+++ b/Audyt innowacyjności/Page6.xaml
@@ -13,6 +13,21 @@
         <Button Content="Dalej" HorizontalAlignment="Left" Margin="653,408,0,0" VerticalAlignment="Top" Width="75" Click="Next"/>
         <Button Content="Confij" HorizontalAlignment="Left" Margin="573,408,0,0" VerticalAlignment="Top" Width="75" Click="Back"/>
 
+        <TextBox x:Name="ZarzadzanieRelacjami" Text="{Binding ZarzadzanieRelacjami, ValidatesOnNotifyDataErrors=True}" HorizontalAlignment="Left" Height="23" Margin="391,128,-211,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" RenderTransformOrigin="-1.562,-1.653"/>
+        <TextBox x:Name="ZwiazkiFirmy" Text="{Binding ZwiazkiFirmy, ValidatesOnNotifyDataErrors=True}" HorizontalAlignment="Left" Height="23" Margin="391,156,-211,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" RenderTransformOrigin="-1.562,-1.653"/>
+        <TextBox x:Name="StosunkiZAgencjami" Text="{Binding StosunkiZAgencjami, ValidatesOnNotifyDataErrors=True}" HorizontalAlignment="Left" Height="23" Margin="391,184,-211,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" RenderTransformOrigin="-1.562,-1.653"/>
+        <TextBox x:Name="RelacjeIOB" Text="{Binding RelacjeIOB, ValidatesOnNotifyDataErrors=True}" HorizontalAlignment="Left" Height="23" Margin="391,212,-211,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" RenderTransformOrigin="-1.562,-1.653"/>
+        <TextBox x:Name="StosunkiZInstytucjami" Text="{Binding StosunkiZInstytucjami, ValidatesOnNotifyDataErrors=True}" HorizontalAlignment="Left" Height="23" Margin="391,245,-211,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" RenderTransformOrigin="-1.562,-1.653"/>
+        <TextBox x:Name="RelacjeZInstytucjami" Text="{Binding RelacjeZInstytucjami, ValidatesOnNotifyDataErrors=True}" HorizontalAlignment="Left" Height="23" Margin="391,273,-211,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" RenderTransformOrigin="-1.562,-1.653"/>
+
+        <Label Content="Jak zarządzamy relacjami? " HorizontalAlignment="Left" Margin="226,128,-75,0" VerticalAlignment="Top" Width="149" />
+        <Label Content="Na ile dobre są związki firmy z dostawcami i klientami?[1-5]" HorizontalAlignment="Left" Margin="50,156,-75,0" VerticalAlignment="Top" Width="325"/>
+        <Label Content="Na ile dobre stosunki są z agencjami rządowymi?[1-5]" HorizontalAlignment="Left" Margin="78,184,-75,0" VerticalAlignment="Top" Width="297"/>
+        <Label Content="Jak układają się relacje z IOB?[1-5]" HorizontalAlignment="Left" Margin="183,212,-75,0" VerticalAlignment="Top" Width="192"/>
+        <Label Content="Na ile dobre stosunki ma firma z instytucjami naukowymi i edukacyjnymi?[1-5]" HorizontalAlignment="Left" Margin="-50,240,-74,0" VerticalAlignment="Top" Width="424"/>
+        <Label Content="Jakie relacje wiążą firmę z instytucjami finansowymi? " HorizontalAlignment="Left" Margin="90,268,-75,0" VerticalAlignment="Top" Width="285" />
+
+        <Label Content="Strona 5/14" HorizontalAlignment="Left" Margin="328,10,0,0" VerticalAlignment="Top"/>
 
     </Grid>
 </Page>
