--- a/Audyt innowacyjności/Page1.xaml
+++ b/Audyt innowacyjności/Page1.xaml
@@ -4,14 +4,24 @@
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:Audyt_innowacyjności"
+	  xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
       Title="Page1">
 
-    <Grid>
-		<Button Content="Sprawdź wynik" HorizontalAlignment="Center" VerticalAlignment="Center" Width="200" Height="100" Margin="429,244,244,243" Click="Btn2"/>
-		<Button Content="Rozpocznij " HorizontalAlignment="Center"  VerticalAlignment="Center" Width="200" RenderTransformOrigin="-0.494,-0.531" Height="100" Click="Btn1" Margin="231,244,430,243"/>
-		<Label Content="Audyt innowacyjności" HorizontalAlignment="Center"  VerticalAlignment="Center" RenderTransformOrigin="0.511,-3.844" Margin="372,0,350,501" FontSize="48"/>
+	<Grid>
 
+
+
+		<Button Content="Sprawdź wynik" HorizontalAlignment="Center" VerticalAlignment="Center" Width="200" Height="100" Margin="472,176,128,174" Click="Btn2"/>
+
+		<Button   HorizontalAlignment="Center"  VerticalAlignment="Center" Width="200" RenderTransformOrigin="-0.494,-0.531" Height="100" Click="Btn1" Margin="170,176,430,174">
+			<materialDesign:PackIcon Kind="Play" ></materialDesign:PackIcon>
+		</Button>
+		<materialDesign:Card Padding="32" Margin="16" materialDesign:ColorZoneAssist.Mode="PrimaryLight">
+
+			<TextBlock VerticalAlignment="Center" Style="{DynamicResource MaterialDesignTitleTextBlock}">AUDYT INOWACYJNOŚCI</TextBlock>
+
+		</materialDesign:Card>
 	</Grid>
 </Page>
