--- a/Audyt innowacyjności/Page5.xaml
+++ b/Audyt innowacyjności/Page5.xaml
@@ -8,7 +8,7 @@
       d:DesignHeight="300" d:DesignWidth="300"
       Title="Page5">
 
-    <Grid>
+    <Grid Margin="0,0,-308,-42">
 
         <Button Content="Dalej" HorizontalAlignment="Left" Margin="653,408,0,0" VerticalAlignment="Top" Width="75" Click="Next"/>
         <Button Content="Confij" HorizontalAlignment="Left" Margin="573,408,0,0" VerticalAlignment="Top" Width="75" Click="Back"/>
